# doitsu-technology-ecommerce

./: .gitignore  README.md  doitsu-technology-ecommerce.code-workspace
application/customer-site/: .editorconfig  .eslintrc.json  .gitignore  .prettierrc  angular.json  package-lock.json  package.json  server.ts  tsconfig.json
application/customer-site/src/: main.server.ts
application/doitsu_technology_website/: .gitignore  .prettierrc  .prettierrc.json  Cargo.toml  README.md  Trunk.toml  bonnie.toml  doitsu_technology_website.code-workspace  index.hydrate.html  index.ssr.html  package-lock.json  package.json
application/doitsu_technology_website/dtech_csr/: Cargo.toml  Trunk.toml  bonnie.toml  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.sh
application/doitsu_technology_website/dtech_csr/designs/: palette.txt
application/doitsu_technology_website/dtech_csr/src/: app.rs
application/doitsu_technology_website/dtech_csr/src/common/: load_scripts.rs  mod.rs
application/doitsu_technology_website/dtech_csr/src/components/: mod.rs  nav.rs  side_bar.rs
application/doitsu_technology_website/dtech_csr/src/components/navigation/: mod.rs  nav_bar.rs  nav_link.rs
application/doitsu_technology_website/dtech_csr/src/components/skeletons/: image_placeholder_skeleton.rs
application/doitsu_technology_website/dtech_csr/src/pages/: blogs.rs  home.rs  mod.rs
application/doitsu_technology_website/dtech_ssr/: Cargo.toml  index.html
application/doitsu_technology_website/src/: app.rs  lib.rs
application/doitsu_technology_website/src/components/navigation/: nav_bar.rs  nav_link.rs
application/doitsu_technology_website/src/components/skeletons/: mod.rs
application/doitsu_technology_website/src/pages/: home.rs  mod.rs  not_found.rs  posts.rs
deployments/azure-devops/release-stuffs/: dev.json
deployments/azure-devops/task-groups/: Doitsu Technology - Deploy Application Using Helm.json  Doitsu Technology - Docker Build And Push.json
deployments/helms/identity-server-admin-api-chart/: Chart.yaml  values.yaml
deployments/helms/identity-server-admin-ui-chart/: Chart.yaml  values.yaml
deployments/helms/identity-server-sts-chart/: Chart.yaml  values.yaml
deployments/helms/overrides/: identity-server-admin-api-values.yaml  identity-server-admin-ui-values.yaml  identity-server-service-sts-values.yaml  identity-server-sts-values.yaml
deployments/localhost/: docker-compose.override.yml  docker-compose.vs.debug.yml  docker-compose.yml
deployments/localhost/shared/: identitydata.json  identityserverdata.json
services/: .editorconfig  Dockerfile  Doitsu.Technology.Ecommerce.sln  Doitsu.Technology.sln  IdentityServer.Admin.Api.Dockerfile  IdentityServer.Admin.ApiDockerfile  IdentityServer.Admin.Dockerfile  IdentityServer.Api.Dockerfile  docker-build.sh
services/archived/blog_service/: .env  Cargo.toml  README.md
services/archived/blog_service/blog_domain/: Cargo.toml
services/archived/blog_service/blog_domain/src/entities/: blog.rs  mod.rs  tag.rs
services/archived/blog_service/blog_domain/src/traits/data_access_services/: mod.rs
services/archived/blog_service/blog_infrastructure/: Cargo.toml
services/archived/blog_service/blog_infrastructure/src/data_access_services/: blog_das.rs
services/archived/blog_service/blog_infrastructure/src/schema/: blog.rs
services/archived/blog_service/src/: main.rs
services/archived/cms-headless/: package.json
services/archived/product_service/: .env  Cargo.toml
services/archived/product_service/product_domain/: Cargo.toml
services/archived/product_service/product_infrastructure/: Cargo.toml
services/archived/product_service/product_infrastructure/migrations/2023-09-10-042745_create_products/: up.sql
services/archived/product_service/product_infrastructure/src/: lib.rs
services/blog-service/: Cargo.toml
services/blog-service/blog-domain/: Cargo.toml
services/blog-service/blog-domain/src/entities/: post.rs
services/blog-service/blog-infrastructure/: Cargo.toml
services/blog-service/blog-infrastructure/migrations/2023-09-10-061334_create_blogs_posts_tags/: down.sql  up.sql
services/blog-service/blog-infrastructure/src/: lib.rs
services/blog-service/blog-infrastructure/src/schema/: tag.rs
services/blog_service/: .env
services/blog_service/blog_domain/: Cargo.toml
services/blog_service/src/: main.rs
services/cms-headless/: Microservices.Cms.sln  package.json
services/cms-headless/deployment/: appsettings.secret.json
services/cms-headless/patches/: @strapi+plugin-users-permissions+4.13.7.patch  purest+4.0.2.patch
services/cms-orchardcore/: Microservices.Cms.sln  nuget.config
services/cms-orchardcore/Cms.WebApp/: Cms.WebApp.csproj
services/identity-service/: IdentityServer.Admin.Dockerfile  IdentityServer.Api.Dockerfile  Microservices.Ids.sln
services/product-service/: Cargo.toml  README.md
services/product-service/product-domain/: Cargo.toml
services/product-service/product-domain/src/entities/: product.rs
services/product-service/product-infrastructure/: Cargo.toml
services/product-service/product-infrastructure/src/: lib.rs
services/product-service/product-infrastructure/src/schema/: product.rs
services/product-service/src/: main.rs
services/src/Api/: Api.csproj  AppExtensions.cs  HostingExtensions.cs  Program.cs  appsettings.jobs.json  appsettings.json
services/src/ApplicationCore/: ApplicationCore.csproj  ApplicationOptions.cs  DependencyInjection.cs  Extensions.cs  PolicyConstants.cs
services/src/Doitsu.Technology.Ecommerce.Domain/: Doitsu.Technology.Ecommerce.Domain.csproj
services/src/Domain/: Domain.csproj
services/src/HatDieu.Infrastructure.PayrixGateway/: DependencyInjection.cs  HatDieu.Infrastructure.PayrixGateway.csproj  MapperProfile.cs
services/src/HatDieu.Infrastructure.ServiceBus/: DependencyInjection.cs  HatDieu.Infrastructure.ServiceBus.csproj
services/src/IdentityServer.Admin.Api/: IdentityServer.Admin.Api.csproj  Program.cs  Startup.cs  appsettings.json
services/strapi/: main.tf
(+991 files in other folders)
