[package]
name = "blog-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["blog-domain", "blog-infrastructure"]

# members = ["blog-domain", "blog-infrastructure"]
[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
blog-domain = { path = "blog-domain", version = "0.1.0" }
blog-infrastructure = { path = "blog-infrastructure", version = "0.1.0" }
dotenvy = "0.15.7"