[package]
name = "dtech_csr"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
lipsum = "0.9.0"
log = "0.4.20"
rand = { version = "0.8.5", features = ["small_rng"] }
yew = { version = "0.21.0" }
yew-router = { version = "0.18.0" }
serde = { version = "1.0.190", features = ["derive"] }
gloo = "0.10.0"
wasm-logger = "0.2.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
once_cell = "1.18.0"
wasm-bindgen = "0.2.88"
web-sys = { version = "0.3.65" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[[bin]]
name = "dtech_csr"
required-features = ["yew/csr"]
