[package]
name = "blog_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust_lang.org/cargo/reference/manifest.html
[workspace]
members = ["blog_domain", "blog_infrastructure"]

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
blog_domain = { path = "blog_domain", version = "0.1.0" }
blog_infrastructure = { path = "blog_infrastructure", version = "0.1.0" }
dotenvy = "0.15.7"