[package]
name = "product_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust_lang.org/cargo/reference/manifest.html
[workspace]
members = ["product_domain", "product_infrastructure"]

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
product_domain = { path = "product_domain", version = "0.1.0" }
product_infrastructure = { path = "product_infrastructure", version = "0.1.0" }
dotenvy = "0.15.7"