[package]
name = "product_infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust_lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4.30", features = ["serde"] }
product_domain = { path = "../product_domain", version = "0.1.0" }
diesel = { version = "2.1.1", features = ["postgres", "chrono", "uuid"] }
diesel_migrations = "2.1.0"
